fix: icon right alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -265,7 +265,6 @@ a {
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 
   z-index: 45;
 }
